# gpc-cres

./: .codex-gcommit-test  .codex-test  .codexignore  .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CODEBASE_GUIDE.md  CODEX_AUDIT_2026-03-20.md  CODEX_PROMPT_DOC_PIPELINE_UPGRADE.md  DEPLOYMENT_STATUS_2026_02_25.md  Entitlement_OS_Meta_Prompt.md  Entitlement_OS_Phase_A_Build_Fix.md  Entitlement_OS_Phase_A_Remaining.md  Entitlement_OS_Phase_A_automation_avgduration_fix.md  Entitlement_OS_Phase_A_automation_duration_fix.md  Entitlement_OS_Phase_A_automation_suspense_fix.md  Entitlement_OS_Phase_A_prospecting_tdz_fix.md  Entitlement_OS_Phase_B_Restart_Part_1_B1_B2.md  Entitlement_OS_Phase_B_Restart_Part_2_B3_B4.md  Entitlement_OS_Phase_B_Restart_Part_3_B5.md  Entitlement_OS_Phase_B_Restart_Part_4_B6.md  Entitlement_OS_Phase_B_Restart_Part_5_B7.md  IMPLEMENTATION_PLAN.md  PHASE_3_DEPLOYMENT_BLOCKERS.md  PLAN.md  PRODUCTION_VERIFICATION_REPORT.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  UPGRADE_NOTES.md  codex-instructions.md  eslint.config.mjs  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+6 more)
.agents/: layer-rules.toml
.aigit/: FETCH_HEAD
.aigit2/: COMMIT_EDITMSG  config  index
.claude/: settings.local.json
.codex/: config.toml  global-config-install.toml  hooks.json  qa-prompts.md  user-config-template.toml
.github/: CODEOWNERS  copilot-instructions.md
.playwright-cli/: page-2026-02-19T20-29-43-709Z.yml  page-2026-02-19T20-33-52-504Z.yml  page-2026-02-19T20-35-18-953Z.yml  page-2026-02-19T20-36-28-024Z.yml  page-2026-02-19T20-38-08-005Z.yml  page-2026-02-19T20-38-09-206Z.yml  page-2026-02-19T20-38-11-330Z.yml  page-2026-02-19T20-38-27-825Z.yml  page-2026-02-19T20-38-45-640Z.yml  page-2026-02-19T20-42-26-644Z.yml  page-2026-02-19T20-47-26-969Z.yml  page-2026-02-19T20-48-05-673Z.yml  page-2026-02-19T20-50-46-637Z.yml  page-2026-02-19T20-55-34-217Z.yml  page-2026-02-19T20-55-37-327Z.yml  page-2026-02-19T20-55-40-429Z.yml  page-2026-02-19T20-55-43-437Z.yml  page-2026-02-19T20-55-46-450Z.yml  page-2026-02-19T20-55-49-625Z.yml  page-2026-02-19T20-55-53-616Z.yml  page-2026-02-19T20-56-03-857Z.yml  page-2026-02-19T20-57-28-638Z.yml  page-2026-02-19T20-58-33-919Z.yml  page-2026-02-19T20-58-39-963Z.yml  page-2026-02-19T20-58-43-026Z.yml  page-2026-02-19T20-58-46-145Z.yml  page-2026-02-19T20-58-59-229Z.yml  page-2026-02-19T21-19-15-748Z.yml  page-2026-02-19T21-19-16-818Z.yml  page-2026-02-19T21-20-21-253Z.yml  page-2026-02-19T21-20-22-286Z.yml  page-2026-02-19T21-20-35-360Z.yml  page-2026-02-19T21-20-51-367Z.yml  page-2026-02-19T21-22-25-095Z.yml  page-2026-02-19T21-23-31-372Z.yml  page-2026-02-19T21-24-14-481Z.yml  page-2026-02-19T21-24-25-910Z.yml
ai/: summary.ts
commands/: retrieve.ts
config/: __init__.py  settings.py
database/: schema.sql  seed_dashboard.sql
docs/: AGENT_DOCS_PROTOCOL.md  ARCHIVE_POLICY.md  AUTOMATION-FRONTIER.md  CHANGELOG_DOCS.md  CLOUDFLARE.md  CLOUDFLARE_AGENTS.md  COMPREHENSIVE_CLAUDE_CODE_CONTINUATION_PROMPT_2026-03-07.md  COMPREHENSIVE_HANDOFF_OBSERVABILITY_2026-03-07.md  COPILOT_COMMANDS.md  DEPLOYMENT_PROPERTY_DB_QUERY_TOOLS.md  DOCS_MANIFEST.json  ENTITLEMENT_OS_META_AUDIT_2026-02-17.md  IMPLEMENTATION_PROGRESS_BOARD.md  IMPLEMENTATION_ROADMAP_CUSTOM.md  INDEX.md  (+20 more)
(+1844 files in other folders)
